--- a/hackuniversity-onestopform.html
+++ b/hackuniversity-onestopform.html
@@ -819,8 +819,8 @@ const logoMap = {
 
   clubs.forEach((club) => {
     const name = club.name || "Club";
-    const logo = club.logo || logoMap[name] || "";
-    const discord = club.discord || "";
+    const logo = club.logo || logoMap[name] ;
+    const discord = club.discord ;
 
     const card = document.createElement("div");
     card.className = "bg-white rounded-lg p-4 border border-blue-200 text-center hover:shadow-md transition-shadow";
